--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -75,7 +75,7 @@
         </tbody>
       </table>
     </section>
-    <p class="govuk-hint govuk-!-margin-top-3">This dataset was last updated 01 January 2023</p>
+    <p class="govuk-hint govuk-!-margin-top-3">This dataset was last updated {{max_entry_date}}</p>
     {% else %}
       {{
         govukInsetText({
