--- a/application/templates/edit_record.html
+++ b/application/templates/edit_record.html
@@ -93,7 +93,8 @@
               },
               {
                 "text": "Cancel changes",
-                "classes": "govuk-button--secondary"
+                "classes": "govuk-button--secondary",
+                "href": url_for('main.dataset', id=dataset.dataset)
               }
             ]
           })
