--- a/application/templates/view_record.html
+++ b/application/templates/view_record.html
@@ -22,19 +22,21 @@
       {% endfor %}
     </dl>
   </div>
-  <div class="govuk-grid-column-two-thirds">
-    {{
-      buttonMenu({
-        "classes": "govuk-!-margin-bottom-0",
-        "items": [
-          {
-            "text": "Edit this record",
-            "type": "submit",
-            "href": url_for('main.edit_record', id=record.dataset_id, record_id=record.id)
-          }
-        ]
-      })
-    }}
-  </div>
+  {% if not record.end_date %}
+    <div class="govuk-grid-column-two-thirds">
+      {{
+        buttonMenu({
+          "classes": "govuk-!-margin-bottom-0",
+          "items": [
+            {
+              "text": "Edit this record",
+              "type": "submit",
+              "href": url_for('main.edit_record', id=record.dataset_id, record_id=record.id)
+            }
+          ]
+        })
+      }}
+    </div>
+  {% endif %}
 </div>
 {% endblock content %}
