--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -62,7 +62,7 @@
                     {
                       "element": "a",
                       "text": "Archive record",
-                      "classes": "govuk-button--warning",
+                      "classes": "govuk-button--secondary",
                       "href": url_for("main.archive_record", id=dataset.dataset, record_id=record.id),
                     }
                   ]
