--- a/application/templates/confirmation.html
+++ b/application/templates/confirmation.html
@@ -3,28 +3,51 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h1 class="govuk-heading-l">Archive record</h1>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-3">Archive record</h1>
+    <p class="govuk-body-l">Are you sure you want to archive this record?</p>
+    <dl class="govuk-summary-list app-summary-list">
+      {% for name, value in record.data.items() %}
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key app-summary-list__key">
+          {{name}}
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">{{value}}</p>
+        </dd>
+      </div>
+      {% endfor %}
+    </dl>
   </div>
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
+
+<p class="govuk-body govuk-!-margin-bottom-6">Archiving this record sets its end date indicating that it is no longer in use.</p>
+
     {{ govukWarningText({
-      "text": "Archiving this record sets its end date indicating it is no longer in use. This action can't be undone.",
+      "html": 'This action cannot be undone',
       "iconFallbackText": "Warning"
     }) }}
-  </div>
-</div>
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-three-quarters">
+
     <form action="{{url_for('main.archive_record', id=record.dataset_id, record_id=record.id)}}" method="POST">
-        {{
-        govukButton({
-          "text": "Archive record",
-          "type": "submit",
-          "classes": "govuk-button--warning",
-          })
-        }}
-      </form>
+      {{
+        buttonMenu({
+          "items": [
+            {
+              "type": "submit",
+              "text": "Archive record",
+              "classes": "govuk-button--warning",
+            },
+            {
+              "element": "a",
+              "href": "javascript:history.back();",
+              "text": "Cancel",
+              "classes": "govuk-button--secondary",
+            }
+          ]
+        })
+      }}
+    </form>
   </div>
 </div>
 
