update history template

--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -2,36 +2,45 @@
 
 {% block content_primary %}
 
-{% for change_date, changes in changes_by_date.items() %}
-<table class="govuk-table">
-  <caption class="govuk-table__caption govuk-table__caption--m">{{change_date.strftime("%d %B %Y")}}</caption>
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third"><span class="govuk-visually-hidden">Event</span></th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Change notes</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third govuk-!-text-align-right"><span class="govuk-visually-hidden">Action</span></th>
-    </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-    {% for change in changes %}
+{% if changes_by_date.items() | length > 0 %}
+  {% for change_date, changes in changes_by_date.items() %}}
+  <table class="govuk-table">
+    <caption class="govuk-table__caption govuk-table__caption--m">{{change_date.strftime("%d %B %Y")}}</caption>
+    <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-        <td class="govuk-table__cell">
-          {% if change.change_type.name == "ADD" %}
-            {{ govukTag({ "text": "New record", "classes": "govuk-tag--green" }) }}
-          {% elif change.change_type.name == "EDIT" %}
-            {{ govukTag({ "text": "Edited record" }) }}
-          {% elif change.change_type.name == "ARCHIVE" %}
-            {{ govukTag({ "text": "Archived record", "classes": "govuk-tag--red" }) }}
-          {% endif %}
-        </td>
-        <td class="govuk-table__cell govuk-!-width-one-third">{% if change.notes %}{{change.notes}}{% endif %}</td>
-        <td class="govuk-table__cell govuk-!-width-one-third govuk-!-text-align-right">
-          <a href="{{ url_for('main.get_record', id=change.dataset_id, record_id=change.record_id) }}">View record</a>
-        </td>
+        <th scope="col" class="govuk-table__header govuk-!-width-one-third"><span class="govuk-visually-hidden">Event</span></th>
+        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Change notes</th>
+        <th scope="col" class="govuk-table__header govuk-!-width-one-third govuk-!-text-align-right"><span class="govuk-visually-hidden">Action</span></th>
       </tr>
-    {% endfor %}
-  </tbody>
-</table>
-{% endfor %}
+    </thead>
+    <tbody class="govuk-table__body">
+      {% for change in changes %}
+        <tr class="govuk-table__row">
+          <td class="govuk-table__cell">
+            {% if change.change_type.name == "ADD" %}
+              {{ govukTag({ "text": "New record", "classes": "govuk-tag--green" }) }}
+            {% elif change.change_type.name == "EDIT" %}
+              {{ govukTag({ "text": "Edited record" }) }}
+            {% elif change.change_type.name == "ARCHIVE" %}
+              {{ govukTag({ "text": "Archived record", "classes": "govuk-tag--red" }) }}
+            {% endif %}
+          </td>
+          <td class="govuk-table__cell govuk-!-width-one-third">{% if change.notes %}{{change.notes}}{% endif %}</td>
+          <td class="govuk-table__cell govuk-!-width-one-third govuk-!-text-align-right">
+            <a href="{{ url_for('main.get_record', id=change.dataset_id, record_id=change.record_id) }}">View record</a>
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% endfor %}
+{% else %}
+  {{
+    govukInsetText({
+      "text": "There is no history for this dataset"
+    })
+  }}
+{% endif %}
+
 
 {% endblock content_primary %}
