--- a/application/templates/add_record.html
+++ b/application/templates/add_record.html
@@ -23,7 +23,11 @@
         {% if field.field == 'reference' %}
           {% set _hint = 'You can change this suggestion' %}
         {% endif %}
-          {{ appField(field, True if form.errors[field.field] else False, hint=_hint) }}
+        {% if form.errors %}
+          {{ appField(field, has_error=True if form.errors[field.field] else False, value=form[field.field].data, hint=_hint) }}
+        {% else %}
+          {{ appField(field, hint=_hint) }}
+        {% endif %}
       {% endfor %}
       {{ form.csrf_token }}
     </div>
