Brief documentation on how datasets are added to app

--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -28,3 +28,9 @@ $govuk-new-link-styles: true;
     align-items: center;
   }
 }
+
+.app-code-block {
+  display: inline-block;
+  padding: 3px 8px;
+  background: #f4f4f4;
+}
