--- a/application/templates/support.html
+++ b/application/templates/support.html
@@ -6,6 +6,11 @@
     <h1 class="govuk-heading-l">Support</h1>
     <p class="govuk-body">This is currently an experimental service. If you need help or support you can email <a href="mailto:digitalland@levellingup.gov.uk">digitalland@levellingup.gov.uk</a>.</p>
     <p class="govuk-body">We aim to respond to all requests within 2 working days.</p>
+
+    <h1 class="govuk-heading-l">How this works</h1>
+    <p class="govuk-body">The DLUHC dataset editor allows the data standards team to manage the datasets the department owns.</p>
+    <p class="govuk-body">The tool is for managing the records in the datasets, not the definitions of the dataset. We define the datasets in our <a href="https://github.com/digital-land/specification" class="govuk-link">specification repository</a>.</p>
+    <p class="govuk-body"><a href="how-we-add-datasets" class="govuk-link">How we add datasets to the DLUHC datasets editor</a></p>
   </div>
 </div>
 {% endblock content %}
