Moved common fields out of record.data up to record model class.
Created backup script which get's current register contents
and stores in data/registers directory.

--- a/application/templates/edit_record.html
+++ b/application/templates/edit_record.html
@@ -26,7 +26,7 @@
             appField(
               field,
               error_message = ' '.join(form.errors[field.field]) if form.errors[field.field] else '',
-              value = record.data.get(field.field, ''),
+              value = record.get(field.field, ''),
               disabled = True,
               hint = "You cannot edit this field"
             )
@@ -36,7 +36,7 @@
             appField(
               field,
               error_message = ' '.join(form.errors[field.field]) if form.errors[field.field] else '',
-              value = form[field.field].data if form[field.field].data else record.data.get(field.field, '')
+              value = form[field.field].data if form[field.field].data else record.get(field.field, '')
             )
           }}
           {% endif %}
