--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -46,7 +46,7 @@
           {% for record in dataset.records %}
           <tr class="app-data-table__row">
             {% for field in dataset.sorted_fields() %}
-              <td class="app-data-table__cell">{{record.data[field.field] | replace('-','&#8209;') | safe }}</td>
+              <td class="app-data-table__cell">{{ record.get(field.field, default="") | replace('-','&#8209;') | safe }}</td>
             {% endfor %}
             {% if session["user"]  and not record.end_date %}
             <td class="app-data-table__cell app-data-table__cell--ui">
