--- a/application/templates/upload.html
+++ b/application/templates/upload.html
@@ -15,6 +15,9 @@
             {{ form.csv_file(class_="govuk-file-upload") }}
             {{ form.csrf_token }}
           </div>
+          <div class="govuk-form-group">
+            <button type="submit" class="govuk-button">Upload</button>
+          </div>
         </form>
     </div>
   </div>
