--- a/application/templates/upload.html
+++ b/application/templates/upload.html
@@ -5,12 +5,22 @@
     <div class="govuk-grid-column-three-quarters">
       <span class="govuk-caption-l">{{ dataset.name }}</span>
       <h1 class="govuk-heading-l">Upload a CSV file</h1>
+      <div>
+
+      </div>
     </div>
   </div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
       <form method="POST" action="{{ url_for('main.upload_csv', dataset=dataset.dataset) }}" enctype="multipart/form-data">
           <div class="govuk-form-group">
+            {% with messages = get_flashed_messages() %}
+              {% if messages %}
+                <p id="csv-upload-error" class="govuk-error-message">
+                  <span class="govuk-visually-hidden">Error:</span> {{messages[0]}}
+                </p>
+              {% endif %}
+            {% endwith %}
             {{ form.csv_file.label(class_="govuk-label") }}
             {{ form.csv_file(class_="govuk-file-upload") }}
             {{ form.csrf_token }}
