add missing tab for changes on schema page. update copy on changes page

--- a/application/templates/change-log.html
+++ b/application/templates/change-log.html
@@ -36,7 +36,7 @@
 {% else %}
   {{
     govukInsetText({
-      "text": "There is no history for this dataset"
+      "text": "There are no changes recorded for this dataset"
     })
   }}
 {% endif %}
