--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -4,7 +4,7 @@
 
 <div class="app-grid-row app-grid-row--space-between govuk-!-margin-bottom-3">
   <div class="app-grid-column">
-    {% if session["user"] %}
+    {% if session["user"] and not history %}
       {{
         buttonMenu({
           "classes": "govuk-!-margin-bottom-6",
