--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -80,6 +80,10 @@
       <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('main.csv', id=dataset.dataset, history=True)}}">Download a csv file of the current data</a></p>
     {% else %}
       <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('main.csv', id=dataset.dataset)}}">Download a csv file of this data</a></p>
+      {% if session["user"] %}
+      <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('upload.update_csv', dataset=dataset.dataset)}}">Upload a csv
+          file of updates for this dataset</a></p>
+      {% endif %}
     {% endif %}
     {% else %}
       {{
@@ -88,7 +92,7 @@
         })
       }}
       {% if session["user"] %}
-        <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('main.upload_csv', dataset=dataset.dataset)}}">Upload a csv file for this dataset</a></p>
+        <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('upload.upload_csv', dataset=dataset.dataset)}}">Upload a csv file for this dataset</a></p>
       {% endif %}
     {% endif %}
   </div>
