--- a/application/templates/upload.html
+++ b/application/templates/upload.html
@@ -12,7 +12,7 @@
   </div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
-      <form method="POST" action="{{ url_for('main.upload_csv', dataset=dataset.dataset) }}" enctype="multipart/form-data">
+      <form method="POST" action="{{ url_for('upload.upload_csv', dataset=dataset.dataset) }}" enctype="multipart/form-data">
           <div class="govuk-form-group">
             {% with messages = get_flashed_messages() %}
               {% if messages %}
