--- a/application/templates/process-updates.html
+++ b/application/templates/process-updates.html
@@ -1,140 +1,54 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-half">
-      <h1 class="govuk-heading-l">Updates provided in CSV file</h1>
-    </div>
-  </div>
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-quarter">
-      <p><a href="#new">New records: {{ new|count }}</a></p>
-      <p><a href="#updated">Updated records: {{ updated|count }}</a></p>
-    </div>
-    <div class="govuk-grid-column-one-quarter">
-      <p><a href="#ended">Ended records: {{ ended|count }}</a></p>
-      <p><a href="#ended">Invalid records: {{ invalid|count }}</a></p>
-    </div>
-  </div>
-  <hr class="govuk-section-break govuk-section-break--l">
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters">
-      <h2 id="new" class="govuk-heading-m">New records</h2>
-      {% for record in new %}
-        <dl class="govuk-summary-list">
-          {% for key, value in record.data.items() %}
-              <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                  {{ key }}
-                </dt>
-                <dd class="govuk-summary-list__value">
-                  {{ value }}
-                </dd>
-              </div>
-          {% endfor %}
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Change notes
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {{record.notes}}
-            </dd>
-          </div>
-        </dl>
-        <a href="#" class="govuk-button" role="button" data-module="govuk-button">
-          Create this record
-        </a>
-      {% endfor %}
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-    </div>
-  </div>
-
-
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters">
-      <h2 id="updated" class="govuk-heading-m">Updated records</h2>
-      {% for record in updated %}
-        <dl class="govuk-summary-list">
-          {% for key, value in record.data.items() %}
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              {{ key }}
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {{ value }}
-            </dd>
-          </div>
-        {% endfor %}
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Change notes
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{record.notes}}
-          </dd>
-        </div>
-      </dl>
-      {% endfor %}
-        <a href="#" class="govuk-button" role="button" data-module="govuk-button">
-          Update this record
-        </a>
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-    </div>
-  </div>
-
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters">
-      <h2 id="ended" class="govuk-heading-m">Ended records</h2>
-      {% for record in ended %}
-        <dl class="govuk-summary-list">
-          {% for key, value in record.data.items() %}
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                {{ key }}
-              </dt>
-              <dd class="govuk-summary-list__value">
-                {{ value }}
-              </dd>
-            </div>
-          {% endfor %}
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Change notes
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {{record.notes}}
-            </dd>
-          </div>
-        </dl>
-      {% endfor %}
-        <a href="#" class="govuk-button" role="button" data-module="govuk-button">
-          Set the end date for this record
-        </a>
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-    </div>
-  </div>
-
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters">
-      <h2 id="invalid" class="govuk-heading-m">Invalid records</h2>
-      {% for record in invalid %}
-        <dl class="govuk-summary-list">
-          {% for key, value in record.data.items() %}
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              {{ key }}
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {{ value }}
-            </dd>
-          </div>
-        {% endfor %}
-      </dl>
-      {{record.notes}}
-      {% endfor %}
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-    </div>
-  </div>
-
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    {% if records | length > 0 %}
+      <section class="app-table-container">
+        <table class="app-data-table">
+          <thead class="app-data-table__head">
+            <tr class="app-data-table__row">
+              {% for field in dataset.sorted_fields() %}
+                <th scope="col" class="app-data-table__header">
+                  <span class="app-data-table__header__label">{{ field.field }}</span>
+                </th>
+              {% endfor %}
+              <th scope="col" class="app-data-table__header app-data-table__header--ui">
+                <span class="app-data-table__header__label">Action</span>
+              </th>
+            </tr>
+          </thead>
+          <tbody class="app-data-table__body">
+            {% for record in records %}
+              <tr class="app-data-table__row">
+              {% for field in dataset.sorted_fields() %}
+                <td class="app-data-table__cell app-data-table__cell--ui">
+                  {{ record.data.get(field.field, None)| value_or_empty_string | replace('-','&#8209;') | safe }}
+                  {% if record.changes and record.changes.get(field.field) %}
+                    <p class="govuk-body-s">({{record.changes.get(field.field)}})</p>
+                  {% endif %}
+                </td>
+              {% endfor %}
+              <td class="app-data-table__cell app-data-table__cell--ui">
+                {% if record.changes %}
+                  {{
+                    buttonMenu({
+                    "items": [
+                          {
+                            "element": "a",
+                            "text": "Update record",
+                            "classes": "govuk-button--secondary",
+                            "href": "#",
+                          }
+                      ]
+                    })
+                  }}
+                {% endif %}
+              </td>
+            {% endfor %}
+          </tbody>
+        </table>
+      </section>
+    {% endif %}
 {% endblock content %}
